fix: set overflow to auto

--- a/sass/static/css/blog-page.scss
+++ b/sass/static/css/blog-page.scss
@@ -12,5 +12,5 @@ body {
 
 pre {
   padding: 1em;
-  overflow-x: scroll;
+  overflow-x: auto;
 }
